--- a/package.json
+++ b/package.json
@@ -6,21 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@internationalized/date": "^3.5.4",
+    "@mui/material": "^5.15.21",
+    "@mui/x-data-grid": "^7.8.0",
+    "@mui/x-date-pickers": "^7.8.0",
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
+    "@tabler/icons-react": "^3.7.0",
+    "axios": "^1.7.2",
+    "bcrypt-ts": "^5.0.2",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.2.12",
+    "highcharts": "^11.4.3",
+    "highcharts-react-official": "^3.2.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-data-grid": "^7.0.0-beta.44",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-hook-form": "^7.52.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.4",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
